--- a/Medicos/Medicos/Views/BeneficiosPage.xaml
+++ b/Medicos/Medicos/Views/BeneficiosPage.xaml
@@ -8,8 +8,8 @@
         <ScrollView>
             <StackLayout VerticalOptions="FillAndExpand" StyleClass="MainSL" BindingContext="{Binding Beneficios}">
                 <Label FontSize="Large" HorizontalOptions="Center" Text="Caminando Juntos"></Label>
-                <Label FontSize="Medium" HorizontalOptions="StartAndExpand" Text="Beneficios del Programa"></Label>
-                <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Acompañamiento presencial y/o telefónico durante el tratamiento"></Label>
+                <Label FontSize="Medium" HorizontalOptions="StartAndExpand" Text="{Binding BeneficioStr, Mode=TwoWay}"></Label>
+                <!--<Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Acompañamiento presencial y/o telefónico durante el tratamiento"></Label>
                 <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Asesoramiento en trámites para la obtención del medicamento"></Label>
                 <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Soporte telefónico dirigido por profesionales de la salud"></Label>
                 <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Entrega de material informativo"></Label>
@@ -18,10 +18,7 @@
                 <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Actividades lúdicas y grupales"></Label>
                 <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Apoyo de servicio de transporte"></Label>
                 <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Servicio de aplicación domiciliaria de medicamento"></Label>
-                <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Consulta y kit dermatológico"></Label>
-                <StackLayout Margin="40,0">
-                    <Button Text="Dilengenciar Encuesta" Command="{Binding EncuestaPaso1Command}" BorderRadius="23"></Button>
-                </StackLayout>
+                <Label  FontSize="Small" HorizontalOptions="StartAndExpand" Text="Consulta y kit dermatológico"></Label>!-->
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
