--- a/Medicos/Medicos/Views/InformeConsolidadoPage.xaml
+++ b/Medicos/Medicos/Views/InformeConsolidadoPage.xaml
@@ -2,28 +2,50 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Medicos.Views.InformeConsolidadoPage"
+             xmlns:local="clr-namespace:Medicos" 
+             xmlns:effect="clr-namespace:Medicos.Effects" 
+             xmlns:syncfusion="clr-namespace:Syncfusion.SfDataGrid.XForms;assembly=Syncfusion.SfDataGrid.XForms" 
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Caminando Juntos">
     <ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand" StyleClass="MainSL" BindingContext="{Binding InformeConsolidado}">
             <Label FontSize="Large" HorizontalOptions="Center" Text="Caminando Juntos"></Label>
             <Label FontAttributes="Bold" FontSize="Medium" HorizontalOptions="StartAndExpand" Text="Información Consolidada de Pacientes"></Label>
-            <Label TextColor="DarkBlue" FontSize="Small" HorizontalOptions="StartAndExpand" Text="Descargar Informe Completo"></Label>
+            <Label TextColor="Indigo" FontSize="Small" HorizontalOptions="StartAndExpand" Text="Descargar Informe Completo">
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding OpenConsolidadoPdfCommand}" ></TapGestureRecognizer>
+                </Label.GestureRecognizers>
+                <Label.Effects>
+                    <effect:UnderlineEffect />
+                </Label.Effects>
+            </Label>
             <Button Text="Buscar" BorderRadius="23" HorizontalOptions="Start"></Button>
-            <ListView  x:Name="listView">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout
-						Orientation="Horizontal">
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="2017"/>
-                                </StackLayout>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <syncfusion:SfDataGrid x:Name="dataGrid"
+            ColumnSizer="Star"
+            AutoGenerateColumns="False"
+                                   GroupCaptionTextFormat="{}{ColumnName}: {Key}"
+            ItemsSource="{Binding PacientesCantidad}">
+                <syncfusion:SfDataGrid.GroupColumnDescriptions>
+                    <syncfusion:GroupColumnDescription ColumnName="Año"  />
+
+                </syncfusion:SfDataGrid.GroupColumnDescriptions>
+                <syncfusion:SfDataGrid.Columns
+                    x:TypeArguments="syncfusion:Columns"
+                    AllowGroupExpandCollapse="True">
+
+                    <syncfusion:GridTextColumn HeaderText="Mes" 
+                                   MappingName="Mes" />
+                    <syncfusion:GridTextColumn HeaderText="N° Pacientes"
+                                   MappingName="Cantidad" />
+                    <syncfusion:GridTemplateColumn MappingName="Año" HeaderText="" Width="40">
+                        <syncfusion:GridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Image="ver_paciente_btn.png" BindingContext="{Binding Source={x:Reference dataGrid}, Path=BindingContext}" Command="{Binding OpenConsolidadoPdfRowCommand}" CommandParameter="{Binding Source={x:Reference dataGrid}}"/>
+                            </DataTemplate>
+                        </syncfusion:GridTemplateColumn.CellTemplate>
+                    </syncfusion:GridTemplateColumn>
+                </syncfusion:SfDataGrid.Columns>
+            </syncfusion:SfDataGrid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
